public/style.css
:root {
    --navbarBackgroundColor: #000;
}

body {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    margin: 0px;
}

/* top bar style */

.informationBar {
    padding: 0.5rem;
    background-color: var(--navbarBackgroundColor);
    color: white;
    text-align: center;
    font-size: 1.75rem;
}

.flexContainerRow {
    display: flex;
    flex-wrap: wrap;
    align-content: normal;
    align-items: center;
    justify-content: space-evenly;
}

.flexContainerCol {
    display: flex;
    flex-wrap: wrap;
    align-content: normal;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
}

.title {
    font-size: 2.5rem;
}

/* heap related information style */

.heapInformationBar {
    display: flex;
    flex-wrap: wrap;
    align-content: center;

    align-items: stretch;

    padding: 0.5rem;
    text-align: center;

    font-size: 1.5rem;
}

#informationField {
    padding: 0.25rem;
    font-size: 1.75rem;
    background-color: darkgreen;
    color: white;
    text-align: center;
}

#debugInformationField {
    padding: 0.25rem;
    font-size: 1.75rem;
    background-color: darkorange;
    color: black;
    text-align: center;
}

/* svg element styles */

circle {
    stroke: darkblue;
    stroke-width: 0.3;
}

text {
    font-size: 0.3em;
    text-anchor: middle;
    alignment-baseline: middle;
    stroke-width: 0.1;
}

line {
    stroke: black;
    stroke-width: 1;
}

path {
    stroke: white;
    fill: white;
}

